[gd_scene load_steps=30 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/rmsmartshape/materials/edge_material.gd" type="Script" id=2]
[ext_resource path="res://addons/rmsmartshape/shapes/point_array.gd" type="Script" id=3]
[ext_resource path="res://addons/rmsmartshape/materials/edge_material_metadata.gd" type="Script" id=4]
[ext_resource path="res://addons/rmsmartshape/materials/shape_material.gd" type="Script" id=5]
[ext_resource path="res://addons/rmsmartshape/shapes/shape_open.gd" type="Script" id=6]
[ext_resource path="res://addons/rmsmartshape/normal_range.gd" type="Script" id=7]
[ext_resource path="res://addons/rmsmartshape/shapes/point.gd" type="Script" id=8]
[ext_resource path="res://addons/rmsmartshape/vertex_properties.gd" type="Script" id=9]
[ext_resource path="res://scenes/props/Interactable.tscn" type="PackedScene" id=10]
[ext_resource path="res://TypingTarget.tscn" type="PackedScene" id=11]
[ext_resource path="res://edge_texture.png" type="Texture" id=12]
[ext_resource path="res://scenes/props/Boundary.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/DevRoom.gd" type="Script" id=14]

[sub_resource type="Resource" id=18]
script = ExtResource( 9 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=19]
script = ExtResource( 8 )
position = Vector2( -79.688, 237.975 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 18 )

[sub_resource type="Resource" id=20]
script = ExtResource( 9 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=21]
script = ExtResource( 8 )
position = Vector2( 221.146, 179.515 )
point_in = Vector2( -129.373, 3.96851 )
point_out = Vector2( 129.373, -3.96851 )
properties = SubResource( 20 )

[sub_resource type="Resource" id=22]
script = ExtResource( 9 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=23]
script = ExtResource( 8 )
position = Vector2( 687.11, 226.936 )
point_in = Vector2( -313.83, -0.616211 )
point_out = Vector2( 313.83, 0.616211 )
properties = SubResource( 22 )

[sub_resource type="Resource" id=24]
script = ExtResource( 9 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=25]
script = ExtResource( 8 )
position = Vector2( 1355.25, -124.01 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 24 )

[sub_resource type="Resource" id=26]
script = ExtResource( 9 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=27]
script = ExtResource( 8 )
position = Vector2( 1211.8, 119 )
point_in = Vector2( -293, 11 )
point_out = Vector2( 293, -11 )
properties = SubResource( 26 )

[sub_resource type="Resource" id=28]
script = ExtResource( 3 )
_points = {
0: SubResource( 19 ),
1: SubResource( 21 ),
2: SubResource( 23 ),
3: SubResource( 25 ),
7: SubResource( 27 )
}
_point_order = [ 0, 1, 2, 7, 3 ]
_constraints = {
}
_next_key = 8

[sub_resource type="Resource" id=14]
script = ExtResource( 2 )
textures = [ ExtResource( 12 ) ]
texture_normals = [  ]
textures_corner_outer = [  ]
textures_corner_inner = [  ]
texture_normals_corner_outer = [  ]
texture_normals_corner_inner = [  ]
textures_taper_left = [  ]
textures_taper_right = [  ]
texture_normals_taper_left = [  ]
texture_normals_taper_right = [  ]
use_corner_texture = false
use_taper_texture = false
fit_mode = 0

[sub_resource type="Resource" id=15]
script = ExtResource( 7 )
begin = 0.0
distance = 0.0
edgeRendering = Vector2( 0, 0 )

[sub_resource type="Resource" id=16]
script = ExtResource( 4 )
edge_material = SubResource( 14 )
normal_range = SubResource( 15 )
weld = true
render = true
z_index = 0
z_as_relative = true
offset = -1.0

[sub_resource type="Resource" id=17]
script = ExtResource( 5 )
_edge_meta_materials = [ SubResource( 16 ) ]
fill_textures = [  ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[node name="DevRoom" type="Node2D"]
script = ExtResource( 14 )

[node name="Spawns" type="Node2D" parent="."]

[node name="Default" type="Node2D" parent="Spawns"]
position = Vector2( 177, 367 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 5, 283 )

[node name="SS2D_Shape_Open" type="Node2D" parent="StaticBody2D3"]
script = ExtResource( 6 )
_points = SubResource( 28 )
material_overrides = {
}
shape_material = SubResource( 17 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 32.0
collision_offset = 0.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( -79.688, 237.975, 22.2122, 210.225, 119.559, 190.305, 221.145, 179.483, 265.442, 180.367, 304.4, 185.159, 500.103, 218.677, 687.11, 226.922, 787.739, 222.902, 860.282, 211.856, 888.848, 204.381, 913.777, 195.941, 999.768, 158.136, 1050.33, 140.558, 1118, 126.794, 1211.8, 119, 1261.69, 114.44, 1283.02, 110.442, 1302.08, 105.387, 1318.98, 99.3687, 1333.83, 92.4703, 1346.74, 84.7754, 1357.81, 76.3674, 1367.15, 67.3298, 1374.88, 57.7455, 1381.1, 47.697, 1385.92, 37.2663, 1389.46, 26.5355, 1391.81, 15.5872, 1393.08, 4.50433, 1393.38, -6.62949, 1391.51, -28.7175, 1387.1, -50.0163, 1380.98, -69.86, 1374.03, -87.5816, 1361.1, -114.014, 1355.25, -124.01, 1382.86, -140.187, 1389.29, -129.146, 1403.32, -100.47, 1411.19, -80.4298, 1418.09, -57.9971, 1423.18, -33.321, 1425.36, -7.53476, 1425, 6.76654, 1423.38, 20.7684, 1420.35, 34.8979, 1415.7, 48.9959, 1409.28, 62.858, 1400.99, 76.2466, 1390.77, 88.9182, 1378.64, 100.657, 1364.63, 111.305, 1348.78, 120.764, 1331.1, 128.986, 1311.55, 135.953, 1290.08, 141.654, 1266.1, 146.135, 1214.58, 150.879, 1122.53, 158.472, 1058.79, 171.42, 1011.47, 187.922, 925.356, 225.773, 898.039, 235.033, 866.757, 243.194, 790.79, 254.756, 687.044, 258.922, 496.689, 250.494, 299.749, 216.819, 263.177, 212.287, 222.525, 211.454, 124.463, 221.927, 29.6249, 241.355, -71.2823, 268.851 )

[node name="Interactable" parent="." instance=ExtResource( 10 )]
position = Vector2( -42, 479 )
conversation = "DevRoom"
entry = "Test1"
dialog_type = "continuous"

[node name="Icon" type="Sprite" parent="Interactable"]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="Boundary" parent="." instance=ExtResource( 13 )]
position = Vector2( 359, 387 )
right_target = NodePath("..")
right_method = "enable"

[node name="TypingTarget" parent="." instance=ExtResource( 11 )]
position = Vector2( 565, 459 )
word = "two"
active = false

[node name="TypingTarget2" parent="." instance=ExtResource( 11 )]
position = Vector2( 521, 355 )
word = "one"
active = false

[node name="TypingTarget3" parent="." instance=ExtResource( 11 )]
position = Vector2( 777, 423 )
word = "three"
active = false

[node name="TypingTarget4" parent="." instance=ExtResource( 11 )]
position = Vector2( 739, 356 )
scale = Vector2( 4, 4 )
word = "FOUR"
active = false

[node name="TypingTarget5" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 829.589, 292.033 )
word = "penis"
active = false

[node name="TypingTarget6" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 485.935, 263.749 )
word = "penis"
active = false
